--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.5",
-    "express": "^4.17.1",
-    "mysql2": "^2.2.5",
-    "sequelize": "^6.5.0"
+    "express": "^4.18.3",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.37.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
